# 1brc

./: .rustfmt.toml  Cargo.toml  README.md
.cargo/: config.toml
app/: Cargo.toml
app/src/: main.rs
brc-app/: Cargo.toml
brc-app/src/: main.rs
brc-core/: Cargo.toml
brc-core/benches/: benchmarks.rs  main_bench.rs  utils_bench.rs
brc-core/src/: fingerprint_table.rs  lib.rs  station_name.rs  table.rs
brc-core/test_resources/: sample.txt
scripts/: customize_original.patch  run_benchmark.sh  run_benchmark_original.sh
