[package]
name = "brc-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.15.0"
memchr = "2.7.4"
rustc-hash = "2.0.0"

[dev-dependencies]
criterion = "0.5"


[[bench]]
name = "main_bench"
harness = false

[[bench]]
name = "utils_bench"
harness = false