[package]
name = "brc-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.15.4"
memchr = "2.7.5"
rustc-hash = "2.1.1"

[dev-dependencies]
criterion = "0.6"


#[[bench]]
#name = "main_bench"
#harness = false

[[bench]]
name = "utils_bench"
harness = false