[package]
name = "brc-core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.17.1"
memchr = "2.8.3"
rustc-hash = "2.1.3"

[dev-dependencies]
criterion = "0.8.2"


#[[bench]]
#name = "main_bench"
#harness = false

[[bench]]
name = "utils_bench"
harness = false